Fixed the line gap in index.html.

--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ th {
 
 #news-header {
     margin: 0px;
-    padding: 8px 8px 10px 8px;
+    padding: 10px 8px 10px 8px;
     border-bottom: 4px solid #273859;
     text-align: left;
     text-transform: uppercase;
